<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
           	>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/register_site"
                android:textColor="@color/Black"
                android:textSize="21sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"                
                android:background="@android:drawable/btn_default" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/name_site"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/nameSite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/White"
                        android:ems="10"
                        android:maxLength="25"
                        android:padding="10sp"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dip" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="11dp"
                                android:text="@string/latitude"
                                android:textColor="@color/Black"
                                android:textColorHint="@color/Black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/longitude"
                                android:textColor="@color/Black"
                                android:textColorHint="@color/Black"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:orientation="vertical" >

                            <EditText
                                android:id="@+id/latitude"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:background="@color/White"
                                android:editable="false"
                                android:padding="5dp"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/longitude"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:background="@color/White"
                                android:editable="false"
                                android:padding="5dp"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/info_site"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/infoSite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/White"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:maxLength="130"
                        android:minLines="3"
                        android:padding="10dp"
                        android:textSize="15sp" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dip" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/buttonReturn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:paddingTop="8dp"
                            android:text="@string/return_map"
                            android:textColor="@color/Black" />
                    </LinearLayout>
					<LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/buttonRemoveSite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:paddingTop="8dp"
                            android:text="@string/remove_site"
                            android:textColor="@color/Black" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/buttonUpdateSite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:paddingTop="8dp"
                            android:text="@string/update_site"
                            android:textColor="@color/Black" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>