<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/info_site_title"
                android:textColor="@color/Black"
                android:textSize="21sp"
                android:typeface="sans" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/btn_default" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/nameSite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Due Torri"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/photoSite"
                        android:layout_width="130dip"
                        android:layout_height="130dip"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/owner_info"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="7dp"
                        android:text="JCarlos"
                        android:textColor="@color/Green"
                        android:textColorHint="@color/Black"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dip" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="11dp"
                                android:text="@string/latitude_info"
                                android:textColor="@color/Black"
                                android:textColorHint="@color/Black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/longitude_info"
                                android:textColor="@color/Black"
                                android:textColorHint="@color/Black"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/latitude"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="right"
                                android:padding="5dp"
                                android:text="1343456.5542"
                                android:textColor="@color/Green"
                                android:textColorHint="@color/Black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/longitude"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="right"
                                android:padding="5dp"
                                android:text="1343456.5542"
                                android:textColor="@color/Green"
                                android:textColorHint="@color/Black"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/info_site_info"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/infoSite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Esto es una prueba para ver que funciona correctamente y que se ve bonito"
                        android:textColor="@color/Green"
                        android:textColorHint="@color/Black"
                        android:textSize="17sp" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dip" >                 

                    <Button
                        android:id="@+id/buttonReturn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/return_map"
                        android:textColor="@color/Black" />
                   
               </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>